[package]
name = "youp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13" }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4" }
colored = { version = "2.1" }
futures = { version = "0.3" }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking"] }
